fix button cutoff

--- a/src/pages/bp-profile/bp-profile.scss
+++ b/src/pages/bp-profile/bp-profile.scss
@@ -23,6 +23,10 @@ bp-profile {
 
 	.col {
 		min-width: 90px;
+
+		.button-inner {
+			font-size: 1.2rem;
+		}
 	}
 
 	.card {
